--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "paper-icon-button": "PolymerElements/paper-icon-button#2.0-preview",
     "polymer": "Polymer/polymer#^2.0.0-rc.1",
     "webcomponentsjs": "webcomponents/webcomponentsjs#^1.0.0-rc.4",
-    "paper-tabs": "PolymerElements/paper-tabs#2.0-preview"
+    "paper-tabs": "PolymerElements/paper-tabs#2.0-preview",
+    "app-pouchdb": "PolymerElements/app-pouchdb#^1.0.0",
+    "iron-input": "PolymerElements/iron-input#^1.0.11"
   },
   "resolutions": {
     "polymer": "^2.0.0-rc.1"
